fix: Input eye icon align in add user form

--- a/ghazal-beauty/src/App.css
+++ b/ghazal-beauty/src/App.css
@@ -86,7 +86,7 @@
 
   .user-info-input
   {
-    @apply outline-none border-solid border-2 border-purple-500 rounded-xl p-2 focus:border-none focus:bg-purple-200 focus:placeholder:text-gray-500
+    @apply outline-none border-solid border-2 border-purple-500 rounded-xl p-2 focus:border-none focus:bg-purple-200 focus:placeholder:text-gray-500 w-full
   }
 
   /* PRODUCTS GROUP */
